--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <h1>JuTeLabs <span>Quote</span> Generator</h1>
         <marquee><p>Explore a world of inspiration with our Quote Generator! Our web application offers a vast collection of thought-provoking and motivational quotes from renowned authors, leaders, and thinkers. With a click of a button, you can discover insightful quotes that inspire, uplift, and encourage. <span class="red-text">Whether you're seeking daily motivation, searching for words of wisdom, or looking for that perfect quote to share with friends and colleagues, our Quote Generator has you covered. Explore a diverse range of quotes on topics like life, success, happiness, and more.</span> <span  class="black-text"> Join our community of quote enthusiasts and start your journey to daily inspiration now!</span> <br> CALL ME ON: +234-9054634160</p></marquee>
-    </header>
+    </header><br>
     <div class="container">
         <div class="header-text">
             <h2>Get Inspired By JuTeLabs Quotes</h2>
@@ -30,7 +30,7 @@
             <button id="get-quote">New Quote</button>
         </div>
         </div>
-    </div>
+    </div>><br>
     <footer>
         Copyright &copy; 2023 Designed By JuTeLabs✌
     </footer>
